test/org/midica/testfiles/failing/include-without-args.midica
INCLUDE

0 c /4
0 d /4
*
1 c /4
